hphp/hack/test/typecheck/shapes_cc_12.php.exp
File "shapes_cc_12.php", line 8, characters 3-4:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
